--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase": "^5.5.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ngx-bar-rating": "^1.1.0",
     "promise-polyfill": "^8.1.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
