--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.10.0",
+    "@ionic-native/facebook": "^4.15.0",
+    "@ionic-native/firebase": "^4.15.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-facebook4": "^3.1.0",
+    "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.2",
@@ -52,7 +56,13 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "243073333039144",
+        "APP_NAME": "Handyman",
+        "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
+      }
     },
     "platforms": [
       "android"
