--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-permissions": "^4.15.0",
+    "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/facebook": "^4.15.0",
     "@ionic-native/firebase": "^4.15.0",
@@ -28,6 +30,8 @@
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-plugin-android-permissions": "^1.0.0",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^3.1.0",
     "cordova-plugin-firebase": "^2.0.5",
@@ -62,7 +66,9 @@
         "APP_ID": "243073333039144",
         "APP_NAME": "Handyman",
         "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
-      }
+      },
+      "cordova-plugin-camera": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android"
