--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.2",
     "ionic-angular": "3.9.2",
+    "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
     "ngx-bar-rating": "^1.1.0",
     "promise-polyfill": "^8.1.0",
