--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/facebook": "^4.15.0",
     "@ionic-native/firebase": "^4.15.0",
+    "@ionic-native/geolocation": "^4.15.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
@@ -35,11 +36,13 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^3.1.0",
     "cordova-plugin-firebase": "^2.0.5",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.2",
+    "haversine": "^1.1.0",
     "ionic-angular": "3.9.2",
     "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
@@ -69,7 +72,10 @@
         "FACEBOOK_ANDROID_SDK_VERSION": "4.37.0"
       },
       "cordova-plugin-camera": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
+      }
     },
     "platforms": [
       "android"
